--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MyAccount/MyAccount.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MyAccount/MyAccount.razor
@@ -35,7 +35,7 @@
         <MudPaper Class="pa-16 ma-2" Elevation="3">
             <div class="row">               
                 <div class="col text-center">                   
-                    <btn type="button" class="btn btn-primary btn-change" data-toggle="collapse" data-target="#collapsePassword" aria-expanded="false" aria-controls="collapsePassword">
+                    <btn type="button" class="btn btn-primary btn-custom-primary" data-toggle="collapse" data-target="#collapsePassword" aria-expanded="false" aria-controls="collapsePassword">
                         Zmień hasło
                     </btn>                    
                     <div class="collapse position-relative" id="collapsePassword" >
