--- a/Patient.Api/Patient.Api.Client/Layout/MyAccount/PatientAccountLayout.razor
+++ b/Patient.Api/Patient.Api.Client/Layout/MyAccount/PatientAccountLayout.razor
@@ -14,7 +14,7 @@
 
                     </div>
                 </div>
-                <div class="col" style="overflow-y: auto;">
+                <div class="col">
                     <main>
                         <article class="content px-4">
                             @Body
