--- a/Patient.Api/Patient.Api.Client/Layout/PatientMenu.razor.css
+++ b/Patient.Api/Patient.Api.Client/Layout/PatientMenu.razor.css
@@ -26,15 +26,7 @@
     }
 
 
-/*//*/
-.bi {
-    display: inline-block;
-    position: relative;
-    width: 1.25rem;
-    height: 1.25rem;
-    top: -1px;
-    background-size: cover;
-}
+
 
 
 .myaccount-menu {
@@ -51,6 +43,7 @@
 .myaccount-icon {
     height: 3rem;
     width: 3rem;
+    color: white;
 }
 
 
