--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Prescription/AdditionalComponents/PatientsPrescriptionsComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Prescription/AdditionalComponents/PatientsPrescriptionsComponent.razor
@@ -10,9 +10,8 @@
 
 
 
-
-<div class="container">
-    <h4>Twoje recepty</h4>
+<h4>Twoje recepty</h4>
+<div class="container" style="max-height: 300px; overflow-y: auto;">    
     <div class="list-group pt-5">
         @if (readingPrescriptions)
         {
