--- a/Patient.Api/Patient.Api/wwwroot/app.css
+++ b/Patient.Api/Patient.Api/wwwroot/app.css
@@ -112,7 +112,6 @@ body{
 
 .bi-x-circle {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-x-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z'/%3E%3C/svg%3E");
-    background-color: white;
 }
 
 .bi-cancel {
@@ -151,3 +150,15 @@ body{
         .badge-item-custom-erasable:hover::after {
             content: "Usuñ";
         }
+
+
+.file-block {
+    display: inline-block;
+    position: static;
+    width: 4.5rem;
+    height: 5rem;
+    margin-block: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    border: 2px solid black;
+}
