--- a/Patient.Api/Patient.Api.Client/Layout/UserLayout.razor.css
+++ b/Patient.Api/Patient.Api.Client/Layout/UserLayout.razor.css
@@ -9,7 +9,7 @@ body{
     background-image: url('/images/kurp2ClientVersion.jpg');
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: fixed;
     width: 100vw;
     height: 100vh;
