--- a/Patient.Api/Patient.Api/wwwroot/app.css
+++ b/Patient.Api/Patient.Api/wwwroot/app.css
@@ -90,6 +90,20 @@ body{
     border-radius: 50%;
 }
 
+    bi-arrow-left:hover {
+        border-color: rgb(215, 238, 145);
+    }
+
+.bi-arrow-right {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-arrow-right-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z'/%3E%3C/svg%3E");
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+    bi-arrow-right:hover {
+        border-color: rgb(144, 238, 144);
+    }
+
 .bi-file-icon {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' fill='currentColor' class='bi bi-file-earmark-fill' viewBox='0 0 16 16'%3E%3Cpath d='M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2m5.5 1.5v2a1 1 0 0 0 1 1h2z'/%3E%3C/svg%3E");
     display: inline-block;
@@ -140,7 +154,7 @@ body{
 
 .badge-item-custom-erasable {
     display: inline-block;
-
+    width: 4rem;
 }
 
     .badge-item-custom-erasable:hover {
@@ -150,7 +164,7 @@ body{
         .badge-item-custom-erasable:hover::after {
             content: "Usuñ";
         }
-
+        
 
 .file-block {
     display: inline-block;
